调整部署参数